@@ -520,6 +520,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Fixed documentation commands.adoc search commands</p>
 </li>
+<li>
+<p>Fixed #117 C-w works in insert mode (deletes previous word) and in normal mode (closes tab)&#8201;&#8212;&#8201;experimental settings must be enabled</p>
+</li>
 </ol>
 </div>
 </div>
