@@ -12,6 +12,7 @@ link:index.html[Home]
   . Fixed #115 #114 errors when creating new tab
   . Fixed #108 pasting urls starting by a space now gets trimmed
   . Fixed documentation commands.adoc search commands
+  . Fixed #117 C-w works in insert mode (deletes previous word) and in normal mode (closes tab) -- experimental settings must be enabled
 
 ## 1.4.2
   . Fixed #107 regression from 0e249e0b1b96f43ee06803bc9c23e01114374990
